2020-06-11  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable32.cpp: new file
	tabulate MF32, not so tested yet

2020-06-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endfio.cpp (ENDFReadMF32): updated
	* source/endflib.cpp (ENDFReadINTG): new function
	(ENDFWriteINTG): new function

	MF32 MT2 LCOMP=2 case, added

2020-05-04  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable5.cpp (DeceTableMF5): modified
	print fraction of each spectrum added

2020-03-10  KAWANO Toshihiko  <kawano@lanl.gov>

	* tools/deceheader.cpp (DeceHeaderCreateLib): bug fixed
	missing MF1/MT452455,456 recovered

2019-12-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFScanLibrary): modified
	copy header text part into ENDFDict object

2019-12-16  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/endflib.cpp (ENDFWriteRecord): updated
	argument of ENDFWriteRecord changed from pointer
	to actual Record object

2019-12-15  KAWANO Toshihiko  <kawano@lanl.gov>

	* tools/deceheader.cpp: new file
	tool to patch text data in the header part

2019-09-23  Toshihiko KAWANO  <kawano@lanl.gov>

	* example/example3.cpp: new file
	new example, which uses ENDFDict object

	* source/endflib.cpp (ENDFWriteTPID): new function
	print TPID in Dict

2019-09-22  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceoutput.cpp (DeceRenumber): modified
	* source/deceheader.cpp (DeceShowHeaders): new function
	(DeceEditHeader): new function
	print and modify parameters in header part
	new commands, showheaders and editheader, added

2019-08-28  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/decetable2.cpp (DeceTableMF2RR7): bug fixed
	parity output fixed

	* source/gfrcs7.cpp (gfrRMatrixLimited): bug fixed
	capture channel index fixed 

2019-08-07  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceglobaloption.cpp (optionSet): modified
	* source/global.h (class GlobalOption): modified
	angle step less than one allowed

	* source/decetable4.cpp (decetable4LEG): modified