@@ -1,3 +1,8 @@
+2020-06-13  KAWANO Toshihiko  <kawano@lanl.gov>
+
+	* source/endflib.cpp (ENDFReadINTG): modified
+	INTG data changed from int to double to reduce int data array
+
 2020-06-11  KAWANO Toshihiko  <kawano@lanl.gov>
 
 	* source/decetable32.cpp: new file
